# nagios-public-status-page

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  SECURITY.md  config.yaml  docker-compose.yml  generate_favicons.py  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  codeql.yml  python-app.yml  scorecard.yml
deploy/: nagios-status-page.service
docs/: BRANCH_PROTECTION_SETUP.md  CODE_SCANNING_SETUP.md  REPOSITORY_SECURITY.md  SECURITY_QUICKSTART.md  SELF_HEALING_ANALYSIS.md  SELF_HEALING_IMPLEMENTATION.md
migrations/: 001_add_pir_url.py  002_add_acknowledged.py
src/nagios_public_status_page/: main.py  models.py
src/nagios_public_status_page/api/: routes.py  schemas.py
src/nagios_public_status_page/collector/: poller.py
src/status_page/: config.py  main.py  models.py
src/status_page/api/: routes.py  schemas.py
src/status_page/collector/: incident_tracker.py  poller.py
src/status_page/db/: database.py
src/status_page/parser/: status_dat.py
src/status_page/rss/: feed_generator.py
static/: index.html
static/css/: style.css
static/img/: README.md
static/js/: app.js
tests/: test_incident_tracker.py  test_parser.py  test_pir.py  test_rss.py
